<resources>
    <string name="app_name">School</string>
    <string name="title_teacher">Profesores</string>
    <string name="title_subject">Materias</string>
    <string name="title_chat">Chat</string>
    <string name="title_settings">Ajustes</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_welcome">Bienvenido</string>
    <string name="prompt_email">Correo electrónico</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar sesión</string>
    <string name="action_sign_in_short">Crear cuenta</string>
    <string name="action_facebook">Facebook</string>
    <string name="action_google">Google</string>
    <string name="title_crea_cuenta">Crear cuenta</string>
    <string name="title_search_teacher">Busqueda por materia</string>
    <string name="edit_profile">Editar perfil</string>
    <string name="inactive">inactivo</string>
    <string name="active">activo</string>
    <string name="sign_off">Cerrar sesión</string>
    <string name="my_matters">Mis materias</string>
    <string name="teachers">Profesores</string>
    <string name="type_message">Escribe tu mensaje</string>

</resources>
