<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".domain.chat_mine.view.ChatMineActivity">



    <ImageView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/header_chat"
        android:scaleType="fitXY"
        android:contentDescription="@string/app_name" />

    <include android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <android.support.v7.widget.CardView
        android:id="@+id/cvTitle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="150dp"
        card_view:cardCornerRadius="6dp"
        app:cardElevation="@dimen/space_min">

        <TextView
            android:id="@+id/tvEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/teachers"
            android:layout_gravity="center"
            android:gravity="center"
            style="@style/textPrimary"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/newMessage"
        android:layout_below="@+id/cvTitle" />


    <LinearLayout
        android:id="@+id/newMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="10">

        <EditText
            android:id="@+id/editMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_small"
            android:background="@drawable/btnround"
            android:hint="@string/type_message"
            android:imeOptions="actionSend"
            android:padding="@dimen/space_small"
            android:layout_weight="9"
            android:inputType="text" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/btnSaveMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_small"
            android:tint="@android:color/white"
            android:layout_marginEnd="@dimen/space_small"
            app:backgroundTint="@color/colorGrey500"
            app:fabSize="mini"
            app:rippleColor="@android:color/white"
            app:srcCompat="@android:drawable/ic_menu_send"
            android:layout_weight="1"/>

    </LinearLayout>



</RelativeLayout>