<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="domain.settings.view.SettingsFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        android:src="@drawable/header_settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <android.support.v7.widget.CardView
        android:id="@+id/cvDataUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="156dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        card_view:cardCornerRadius="6dp"
        tools:ignore="MissingConstraints">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/user"
            app:civ_border_color="@android:color/white"
            app:civ_border_width="2dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvname"
                style="@style/textPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Mireya Jimenez Perez" />

            <TextView
                android:id="@+id/tvEspecialidad"
                style="@style/textSecondary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Developed Android Junior" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cvEditProfile"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvDataUser"
        card_view:cardCornerRadius="6dp">

        <TextView
            android:id="@+id/tvEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile"
            android:layout_gravity="center"
            android:gravity="center"
            style="@style/textPrimary"/>

        <ImageView
            android:id="@+id/imgEdit"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_edit"
            android:contentDescription="@string/app_name" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cvEstate"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvEditProfile"
        card_view:cardCornerRadius="6dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            tools:ignore="UselessParent"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:background="@drawable/btnround">

            <Button
                android:id="@+id/btnActivo"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:background="@color/colorPrimary"
                android:text="@string/active"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btnInactivo"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:background="@android:color/white"
                android:text="@string/inactive" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cvSignOff"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvEstate"
        card_view:cardCornerRadius="6dp">

        <TextView
            android:id="@+id/tvSignOff"
            style="@style/textPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/sign_off" />

        <ImageView
            android:id="@+id/imgSignOff"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_exit"
            android:contentDescription="@string/app_name" />
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>
